--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     }
 
     .backgrounds .slide-background:first-child {
+      background-image: url('./images/intro.svg');
+    }
+
+    .backgrounds .slide-background:nth-child(2) {
       background-image: url('./images/title-bg.png');
     }
 
